fixed scrollbar bug

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,12 @@
   text-shadow: 1px 1px 0 cyan, -1px -1px 0 cyan, 1px -1px 0 blue,
     -1px 1px 0 green, 1px 1px 0 blue;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  display: none;
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
